--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
             <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.11.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -53,5 +60,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
